--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/style.css">
 </head>
+
 <body>
-    <h1 class="text-3xl">Template</h1>
+    <nav class="py-6 mx-4 uppercase">
+        <div class="container flex justify-between">
+            <img src="./dist/img/logo.svg" alt="" class="w-10 lg:w-8">
+            <ul class="hidden lg:flex text-md items-center space-x-5">
+                <li class="hover:underline"><a href="">home</a></li>
+                <li class="hover:underline"><a href="">about</a></li>
+                <li class="hover:underline"><a href="">works</a></li>
+                <li class="hover:underline"><a href="">contact</a></li>
+            </ul>
+            <button class="px-3 py-1 lg:hidden">
+                <img src="dist/img/bars.svg" alt="" class="w-12">
+            </button>
+        </div>
+    </nav>
+
+    <main class="mx-4">
+        <section class="container flex flex-col items-center p-8 bg-zinc-900 text-white rounded-3xl">
+            <div class="max-w-prose flex flex-col justify-center items-center my-14 text-center">
+                <h1 class="text-5xl font-bold">Visual Designer Based in Indonesia</h1>
+                <p class="mt-4 mb-6 text-sm font-extralight text-zinc-300">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua minim veniam, quis nostrud.</p>
+                <a href=""
+                    class="px-6 py-3 font-bold rounded-3xl bg-gradient-to-b from-orange-400 to-orange-500 hover:to-orange-700">contact
+                    me</a>
+            </div>
+
+            <div class="flex flex-col gap-6 lg:flex-row">
+                <div class="img-left relative rounded-3xl overflow-hidden hover:scale-95 transition-transform">
+                    <img src="/dist/img/image1.png" alt="Nothing Phone">
+                    <p class="absolute bottom-6 left-8 font-bold text-lg">Branding Project</p>
+                </div>
+                <div class="img-right relative rounded-3xl overflow-hidden hover:scale-95 transition-transform">
+                    <img src="/dist/img/image2.png" alt="Nothing Phone">
+                    <p class="absolute bottom-6 left-8 font-bold text-lg">Branding Project</p>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
+
 </html>
