Clients and Footer

--- a/index.html
+++ b/index.html
@@ -70,10 +70,106 @@
                 <li class="transition-transform duration-300 md:hover:-translate-x-10">digital marketing</li>
             </ul>
 
-            
+            <div class="photos flex gap-8">
+                <div class="relative rounded-3xl overflow-hidden hover:scale-95 transition-transform">
+                    <img src="dist/img/image3.jpeg" alt="Nothing Phone">
+                    <p class="absolute bottom-6 left-8 font-bold text-lg">Branding Project</p>
+                </div>
+                <div class="relative hidden rounded-3xl overflow-hidden hover:scale-95 transition-transform md:block">
+                    <img src="dist/img/image4.jpeg" alt="Nothing Phone">
+                    <p class="absolute bottom-6 left-8 font-bold text-lg">Branding Project</p>
+                </div>
+                <div class="relative hidden rounded-3xl overflow-hidden hover:scale-95 transition-transform lg:block">
+                    <img src="dist/img/image5.jpeg" alt="Nothing Phone">
+                    <p class="absolute bottom-6 left-8 font-bold text-lg">Branding Project</p>
+                </div>
+            </div>
         </section>
 
+        <section class="container flex flex-col justify-center items-center my-32 text-zinc-400 px-8">
+            <p class="mb-20 text-sm font-extralight uppercase tracking-[6px]">past clients</p>
+            <div class="clients space-y-16">
+
+                <div class="box md:flex">
+                    <div class="number hidden md:block md:w-1/2 text-xl">
+                        <p>0 1</p>
+                    </div>
+                    <div class="company flex flex-col md:w-1/2">
+                        <img src="dist/img/fb.png" alt="logo FB" class="max-w-[240px] mb-8">
+                        <p>Through our community practice, helping one of the world’s leading technology companies
+                            advise and mentor for an ongoing
+                            global initiative that spotlights inspirational YouTube creators.</p>
+                    </div>
+                </div>
+
+                <div class="border border-zinc-200"></div>
+
+                <div class="box md:flex">
+                    <div class="number hidden md:block md:w-1/2 text-xl">
+                        <p>0 2</p>
+                    </div>
+                    <div class="company flex flex-col md:w-1/2">
+                        <img src="dist/img/netflix.svg" alt="logo Netflix" class="max-w-[240px] mb-8">
+                        <p>Through our community practice, helping one of the world’s leading technology companies
+                            advise and mentor for
+                            an ongoing
+                            global initiative that spotlights inspirational YouTube creators.</p>
+                    </div>
+                </div>
+
+                <div class="border border-zinc-200"></div>
+
+                <div class="box md:flex">
+                    <div class="number hidden md:block md:w-1/2 text-xl">
+                        <p>0 3</p>
+                    </div>
+                    <div class="company flex flex-col md:w-1/2">
+                        <img src="dist/img/zoom.svg" alt="logo Zoom" class="max-w-[240px] mb-8">
+                        <p>Through our community practice, helping one of the world’s leading technology companies
+                            advise and mentor for
+                            an ongoing
+                            global initiative that spotlights inspirational YouTube creators.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="bg-zinc-900 text-white rounded-t-3xl">
+        <div class="containter p-8 flex flex-col items-center lg:flex-row lg:justify-between">
+            <div class="author flex flex-col items-center mb-16">
+                <img src="dist/img/avatar.png" alt="Donnie" class="my-12 w-32">
+                <p class="text-lg">Visual Designer Based in Indonesia</p>
+            </div>
+
+            <div class="links flex flex-col space-y-12 text-center lg:flex-row lg:space-y-0 lg:space-x-20 lg:text-left">
+                <div class="links-group flex flex-col space-y-2">
+                    <p class="font-bold">Navigation</p>
+                    <a href="" class="font-thin text-sm">Home</a>
+                    <a href="" class="font-thin text-sm">About</a>
+                    <a href="" class="font-thin text-sm">Expertise</a>
+                    <a href="" class="font-thin text-sm">Work</a>
+                </div>
+
+                <div class="links-group flex flex-col space-y-2">
+                    <p class="font-bold">Services</p>
+                    <a href="" class="font-thin text-sm">Branding</a>
+                    <a href="" class="font-thin text-sm">UI/UX Design</a>
+                    <a href="" class="font-thin text-sm">Development</a>
+                    <a href="" class="font-thin text-sm">Digital Marketing</a>
+                </div>
+
+                <div class="links-group flex flex-col space-y-2">
+                    <p class="font-bold">Social Media</p>
+                    <a href="" class="font-thin text-sm">Dribbble</a>
+                    <a href="" class="font-thin text-sm">Twitter</a>
+                    <a href="" class="font-thin text-sm">Instagram</a>
+                    <a href="" class="font-thin text-sm">LinkedIn</a>
+                </div>
+            </div>
+        </div>
+        <p class="py-8 border-t border-zinc-600 text-zinc-600 text-center">2023 | Donnie Yen</p>
+    </footer>
 </body>
 
 </html>
