--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </main>
 
     <footer class="bg-zinc-900 text-white rounded-t-3xl">
-        <div class="containter p-8 flex flex-col items-center lg:flex-row lg:justify-between">
+        <div class="container p-8 flex flex-col items-center lg:flex-row lg:justify-between">
             <div class="author flex flex-col items-center mb-16">
                 <img src="dist/img/avatar.png" alt="Donnie" class="my-12 w-32">
                 <p class="text-lg">Visual Designer Based in Indonesia</p>
